twisting the package.json to see if things work out

--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "dev": "deno run -A --unstable npm:astro dev",
-    "start": "deno run -A --unstable npm:astro dev",
+    "dev": "astro dev",
+    "start": "astro dev",
     "build": "astro build",
-    "preview": "deno run -A --unstable ./dist/server/entry.mjs",
-    "astro": "astro",
-    "format": "deno fmt && prettier --write ."
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/deno": "^5.0.1",
-    "@astrojs/vercel": "^5.0.0",
-    "astro": "^3.0.8"
+    "@astrojs/deno": "^4.2.0",
+    "astro": "^2.10.4"
   }
 }
