--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/deno": "^5.0.1",
-    "astro": "^3.0.8"
+    "@astrojs/cloudflare": "^12.2.3",
+    "astro": "^5.4.2"
   }
 }
