--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.3",
-    "astro": "^5.4.2"
+    "@tailwindcss/vite": "^4.0.11",
+    "astro": "^5.4.2",
+    "tailwindcss": "^4.0.11"
   }
 }
