--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^12.2.3",
+    "@astrojs/react": "^4.2.7",
     "@tailwindcss/vite": "^4.1.3",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.4",
     "astro": "^5.4.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.3"
   }
 }
